--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,35 @@ h2 {
 .container {
   width: 630px;
   margin: 100px auto;
-  background: #FFF;
+
+
+
+}
+.hero {
+    line-height: 0;
 }
 
 .hero img {
     width:100%;
+    border-radius: 20px 20px 0 0;
+}
+
+section .part1 {
+    background: #FFF;
+}
+section .part1,section .part2 {
+    padding:40px;
+
+}
+aside.left {
+    float:left;
+
+}
+
+aside.right {
+    float:right;
+
+}
+aside {
+    margin-right: 24px;
 }
