--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ h2 {
 
 
 .container {
-  width: 630px;
+  width: 600px;
   margin: 100px auto;
 
 
@@ -92,6 +92,9 @@ aside.right {
     float:right;
 
 }
+
+
 aside {
-    margin-right: 24px;
+  margin-right: 1.5rem;
+  margin-bottom: 0.625rem;
 }
