--- a/css/small.css
+++ b/css/small.css
@@ -1,16 +1,15 @@
-
-
 .container {
-  width: 100%;
-  margin: 0;
-  padding: 0;
+    width:100%;
+    margin:0;
+    padding: 0;
 }
 
-.hero .img {
-  border-radius: 0;
+.hero img {
+
+    border-radius: 0 0;
 }
 
 aside.right, aside.left {
-  text-align: center;
-  float: inherit;
+    text-align: center;
+    float: inherit;
 }
