--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ a:focus {
 /*	5 - Start Home Section
 	****************************/
 #home {
-  background: url("../img/hero-bg.jpg") no-repeat center;
+  background: url("../img/internet.jpg") no-repeat center;
   background-size: cover;
   height: 100vh;
   color: #fff;
